Fix unusable gap at bottom of canvas by removing toggle-visible-button from document flow

--- a/src/controls/controls.styles.scss
+++ b/src/controls/controls.styles.scss
@@ -5,6 +5,9 @@
     width: 100vw;
 
     .toggle-visible-button {
+        position: absolute;
+        bottom: 100%;
+        left: 0;
         background-color: #333;
         border: none;
         border-radius: 0px 8px 0 0;
